[package]
name = "dicerollerlib"
version = "0.1.0"
edition = "2021"
authors = ["Vinicius Camilotti"]
description = "Small rust library that rolls dices"
homepage = "https://github.com/Tavola-Redonda/dicerollerlib"
repository = "https://github.com/Tavola-Redonda/dicerollerlib"
license = "AGPL 3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
